--- a/Web/views/pages/maintainer-cloudflare.ejs
+++ b/Web/views/pages/maintainer-cloudflare.ejs
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="columns">
 			<div class="column is-one-quarter">
-				<%- include("../partials/admin-menu", { active: "/dashboard/maintainer/infrastructure/cloudflare" }) %>
+				<%- include("../partials/maintainer-menu") %>
 			</div>
 			<div class="column">
 				<div class="card">
