feat: Add vote sites management + fix site settings data safety
Added:
- Vote sites configuration page in maintainer console (sudo-only)
- Schema support for vote_sites in siteSettingsSchema
- Default vote sites (top.gg, Discord Bot List) in config template
- Menu entry under Global Options

Fixed:
- Maintainer console crash on empty aggregate results
- PresenceUpdate log spam for guilds without server documents
- Refactored all SiteSettings controllers to prevent accidental blank document creation
  - GET requests never create/save (use defaults if not found)
  - POST requests only create when saving actual data

--- a/Web/views/partials/maintainer-menu.ejs
+++ b/Web/views/partials/maintainer-menu.ejs
@@ -63,6 +63,11 @@
                 <% } else { %>
                 <a href="/dashboard/maintainer/global-options/donations">Donations</a>
                 <% } %>
+                <% if (currentPage === "/dashboard/maintainer/global-options/vote-sites") { %>
+                <a class="is-active" href="#">Vote Sites</a>
+                <% } else { %>
+                <a href="/dashboard/maintainer/global-options/vote-sites">Vote Sites</a>
+                <% } %>
             <% } %>
 		</li>
 	</ul>
